cambio de imagen home

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <main>
     <section class="artesanias-turkito">
         <h1>ARTESANIAS TURKITO</h1>
-        <img src="./assets/imagenes/img herreria.jpg" alt="">
+        <img src="./assets/imagenes/WhatsApp Image 2025-01-19 at 10.26.26 PM.jpeg" alt="">
     </section>
     <section class="quienes-somos">
         <h1 class="quienes">QUIENES SOMOS</h1>
